--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "material-design-icons": "^3.0.1",
+    "turn-js": "^0.5.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.0"
+    "vuetify": "^1.3.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
